<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- TODO: Relates to TEXT of number of articles in settings -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <!-- TODO: Relates to the number of articles shown by default -->
    <EditTextPreference
        android:defaultValue="@string/settings_max_articles_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_Number_of_Articles_label" />

</PreferenceScreen>